# PlantDoc

./: .gitignore  Makefile  README.md  __init__.py  fix_history.py  index.html  project.md  pyproject.toml  run_prepare.py  setup.py
cli/: attention_viz_command.py  main.py
configs/: cbam_only_resnet18_v1.yaml  config.yaml
configs/hydra/: config.yaml
configs/model/: config.yaml
core/: __init__.py
core/cli/: main.py
core/data/: __init__.py  batch_transforms.py  datamodule.py  datasets.py  prepare_data.py  transforms.py
core/evaluation/: __init__.py  attention_visualization.py  evaluate.py  interpretability.py  metrics.py  shap_evaluation.py  shap_interpreter.py  visualization_data_saver.py
core/models/: __init__.py  attention.py  base.py  model_cbam18.py  model_factory.py  registry.py
core/models/backbones/: __init__.py  blocks.py  cbam_resnet18.py
core/models/heads/: __init__.py  residual.py
core/training/: __init__.py  loss.py  optimizers.py  schedulers.py  train.py
core/training/callbacks/: __init__.py  _init__.py  adaptive_weight.py  base.py  confidence_monitor.py  early_stopping.py  gradcam_callback.py  lr_scheduler.py  metrics_logger.py  model_checkpoint.py  shap_callback.py  swa.py  utils.py  visualization_data_saver.py
core/tuning/: __init__.py  optuna_runner.py  search_space.py
core/visualization/: __init__.py  attention_command.py  attention_viz.py  base_visualization.py  visualization.py
core/visualization/flows/: __init__.py  confidence_viz.py  confusion_flow.py
data/preprocessed/: DATA_PREPARATION_REPORT.md
data/preprocessed/analysis/: analysis_summary_report.md
data/preprocessed/visualization/: visualization_summary.txt
docs/cbam_only_resnet18_v3/reports/: training_report.html
outputs/cbam_only_resnet18_v1/attention_visualizations/: Blueberry_healthy_attention_report.html  (+14 more)
outputs/dataset_analysis_report/: summary_report.md
reports/: __init__.py  cbam_only_resnet18_v1.html  cbam_only_resnet18_v2.html  cbam_only_resnet18_v3.html  generate_plots.py  generate_report.py
reports/templates/: __init__.py  training_report.html
scripts/: generate_attention.py  generate_augmentations.py  generate_visualizations.py  multirun.py  test_enhanced_visualization.py  test_visualization_saver.py
utils/: __init__.py  config_utils.py  experiment_registry.py  logger.py  metrics.py  mps_utils.py  paths.py  seed.py  visualization.py
(+52 files in other folders)
